--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
       "@babel/plugin-proposal-object-rest-spread"
     ]
   },
+  "eslintConfig": {
+    "extends": "eda",
+    "ignorePatterns": [
+      "bundle.js"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pruesinghnagra/boilerplate.git"
@@ -49,6 +55,9 @@
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
     "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.1",
     "css-loader": "^5.0.1",
@@ -64,6 +73,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "style-loader": "^2.0.0",
+    "superagent": "^6.1.0",
     "supertest": "^6.0.1",
     "tailwindcss": "^2.0.3",
     "webpack": "^5.6.0",
